[package]
name = "multi-zkvm-prover"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
boundless-market = { workspace = true, features = ["prover_utils"] }
clap = { workspace = true }
multi-zkvm-types = { workspace = true }
risc0-backend = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
