[package]
name = "boundless-r0-backend"
description = "RISC Zero implementation of the Boundless market BackendProvider"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[features]
default = ["risc0"]
risc0 = [
    "boundless-market/prover_utils",
    "dep:bincode",
    "dep:blake3_groth16",
    "dep:boundless-assessor",
    "dep:risc0-aggregation",
    "dep:risc0-ethereum-contracts",
    "dep:risc0-zkvm",
    "dep:tracing",
]
# Helpers for use in downstream test fixtures only.
test-utils = ["risc0"]

[dependencies]
alloy = { workspace = true, features = ["network", "providers"] }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true, optional = true }
blake3_groth16 = { workspace = true, optional = true }
boundless-assessor = { workspace = true, optional = true }
boundless-market = { version = "2.1.0-alpha.0", path = "../boundless-market", default-features = false }
bytemuck = { workspace = true }
risc0-aggregation = { workspace = true, optional = true }
risc0-ethereum-contracts = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
