[package]
name = "requestor-lists"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy = { workspace = true, features = ["serde"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
