[package]
name = "doc-test"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0"
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
glob = "0.3"
regex = "1.11"
