[workspace]
resolver = "2"
members = ["apps"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]

alloy = { version = "1.0" }
anyhow = { version = "1.0" }
boundless-market = { path = "../../crates/boundless-market" }
boundless-test-utils = { path = "../../crates/test-utils" }
broker = { path = "../../crates/broker" }
clap = { version = "4.5", features = ["derive", "env"] }
# Intra-workspace dependencies
guest-util = { path = "../../crates/guest/util" }

# risc0 monorepo dependencies.
risc0-zkvm = { version = "3.0.4", default-features = false }
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

# Always optimize; otherwise, local proving takes much longer to run
[profile.dev]
opt-level = 3
